# learn_optimize_rot

./: .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
include/: dataloader.h  optimizer.h  utility.h
src/: CMakeLists.txt  dataloader.cpp  optimizer.cpp  utility.cpp
tests/: CMakeLists.txt  optimizer.cpp
tools/: generate_answer.py  generate_data.py  test_open3d.py  view3d.py
